# instally

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
api/: Cargo.toml  build.rs
api/src/: ffi.rs  lib.rs  like.rs  macros.rs
binarygen/: Cargo.toml  build.rs
binarygen/src/: main.rs
core/: Cargo.toml
core/locales/: en-US.yml  tr-TR.yml  tr.yml
core/src/: error.rs  factory.rs  lib.rs
core/src/archiving/: error.rs  mod.rs  zip_read.rs  zip_write.rs
core/src/definitions/: app.rs  bytebuffer.rs  context.rs  dependency.rs  error.rs  i18n.rs  mod.rs  operation.rs  package.rs  product.rs  repository.rs  script.rs  summary.rs
core/src/extensions/: future.rs  mod.rs
core/src/helpers/: file.rs  formatter.rs  like.rs  mod.rs  process.rs  serializer.rs  sha1.rs  tmp.rs  versioning.rs  workflow.rs
core/src/http/: client.rs
core/src/scripting/: builder.rs  error.rs  j_object.rs  mod.rs
core/src/workloads/: abstraction.rs  definitions.rs  error.rs  errors.rs  installer.rs  mod.rs  noop.rs  uninstaller.rs  updater.rs  workload.rs
core/src/workloads/operations/: archive.rs  createappentry.rs  createfile.rs  createmaintinancetool.rs  createsymlink.rs  mod.rs
installer/: Cargo.toml
installer/src/: app.rs  main.rs
installer/src/archiving/: mod.rs  zip_read.rs  zip_write.rs
installer/src/helpers/: mod.rs
installer/src/http/: client.rs
installer/src/workloads/: abstraction.rs  errors.rs  installer.rs  mod.rs  uninstaller.rs  updater.rs
repogen/: Cargo.toml
repogen/src/: main.rs
scaffold/: Cargo.toml  build.rs  dummy_product.json
scaffold/src/: app.rs  factory.rs  main.rs
