
[workspace]
members = ["api", "core", "scaffold", "binarygen", "repogen", "thirdparty\\struct_field"] 

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true # Enable Link Time Optimization (LTO)
codegen-units = 1 # Reduce Parallel Code Generation Units to Increase Optimization
panic = "abort" # Smaller panic implementation

[workspace.dependencies]
struct_field = { git = "https://github.com/acard0/struct_field", rev = "0b947e8" }
fs-err = "2.9.0"