
[workspace]
resolver = "2"
members = ["api", "core", "scaffold", "binarygen", "repogen"] 

[profile.release]
strip = true
opt-level = "z"
lto = true

[workspace.dependencies]
rust-i18n = { git = "https://github.com/acard0/rust-i18n", rev = "69fe943", features = [ "rust-i18n-extract", "clap", "anyhow", "quote", "itertools" ] }
struct_field = { git = "https://github.com/acard0/struct_field", rev = "0b947e8" }