[package]
name = "instally-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "instally_api"
crate-type = ["cdylib"]

[dependencies]
instally-core = { path = "../core" }
tokio = "1.29.1"
env_logger = "0.10.0"
log = "0.4"
futures-executor = "0.3.28"
once_cell = "1.18.0"

[build-dependencies]
static_vcruntime = "2.0"