[package]
name = "instally-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "instally_api"
crate-type = ["cdylib"]

[dependencies]
instally-core = { path = "../core" }
tokio = "1.45.1"
env_logger = "0.11.8"
log = "0.4.27"
futures-executor = "0.3.31"
once_cell = "1.21.3"

[target.'cfg(target_os = "windows")'.build-dependencies]
static_vcruntime = "3.0.0"