[package]
name = "instally-bingen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
instally-core = { path = "../core" }
serde = { version = "1.0.164", features = ["derive"] }
quick-xml = { version = "0.29.0", features = ["serialize"] }
patternscan = "1.2.0"
clap = { version = "4.3.11", features = ["derive"] }