[package]
name = "instally-bingen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
instally-core = { path = "../core" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
patternscan = "1.2.0"
clap = { version = "4.5.38", features = ["derive"] }

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1.12"
static_vcruntime = "2"