[package]
name = "instally"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.22.0"
eframe = "0.22.0"
reqwest = { version = "0.11.18", features = ["stream"] }
async-trait = "0.1.68"
tokio = { version = "1.0", features = ["full"] }
strum_macros = "0.25.0"
futures-executor = "0.3.28"
futures = "0.3.28"
thiserror = "1.0.40"
log = "0.4.17"
env_logger = "0.10.0"
bytes = "1.4.0"
catppuccin-egui = "3.0.0"
roxmltree = "0.18.0"
serde = { version = "1.0.164", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_derive = "1.0.164"
sevenz-rust={version="0.4.3", features=["compress"]}
parking_lot = "0.12.1"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true # Enable Link Time Optimization (LTO)
codegen-units = 1 # Reduce Parallel Code Generation Units to Increase Optimization