[package]
name = "instally"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.22.0"
eframe = "0.22.0"
catppuccin-egui = "3.0.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1.68"
strum_macros = "0.25.0"
futures-executor = "0.3.28"
futures = "0.3.28"
parking_lot = "0.12.1"
bytes = "1.4.0"
log = "0.4.17"
env_logger = "0.10.0"
thiserror = "1.0.40"
reqwest = { version = "0.11.18", features = ["stream"] }
serde = { version = "1.0.164", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_derive = "1.0.164"
walkdir = "*"
filepath = "0.1.2"
tempfile = "3.6.0"
zip = "*"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true # Enable Link Time Optimization (LTO)
codegen-units = 1 # Reduce Parallel Code Generation Units to Increase Optimization