[package]
name = "instally-repogen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
instally-core = { path = "../core" }
tokio = "1.29"
env_logger = "0.10"
log = "0.4"
futures-executor = "0.3"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "*"
zip = "*"
clap = { version = "4", features = ["derive"] }

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"
static_vcruntime = "2"