[package]
name = "instally-repogen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
instally-core = { path = "../core" }
tokio = "1.45.1"
env_logger = "0.11.8"
log = "0.4.27"
futures-executor = "0.3.31"
once_cell = "1.21.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
walkdir = "2.5.0"
zip = "4.0.0"
clap = { version = "4.5.38", features = ["derive"] }

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"
static_vcruntime = "2"