[package]
name = "instally-scaffold"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
instally-core = { path = "../core" }
iced    = { version = "0.13", features = ["canvas","advanced"] }
tokio = { version = "1", features = ["full"] }
tokio-stream  = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "6.0.0"
log = "0.4"
env_logger = "0.11"
sys-locale = "*"
rust-i18n.workspace = true

[build-dependencies]
winres = "0.1"
static_vcruntime = "2"