[package]
name = "instally-scaffold"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
instally-core = { path = "../core" }
iced    = { version = "0.13.1", default-features = false, features = [ "svg", "tiny-skia", "canvas" ] }
tokio = { version = "1.45.1", features = ["full"] }
tokio-stream  = "0.1.17"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
directories = "6.0.0"
log = "0.4.27"
env_logger = "0.11.8"
sys-locale = "0.3.2"
rust-i18n.workspace = true

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1.12"
static_vcruntime = "2"